# test-streamlit-cloudrun-fuji

./: .gitignore  Dockerfile  LICENSE  README.md  cloudbuild.yaml  dockerfile
app/: main.py  pyproject.toml
